--- a/index.html
+++ b/index.html
@@ -1,22 +1,218 @@
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>My First Website</title>
-    <link rel="stylesheet" href="style.css">
+<titl<html>e>Yes/No Program</title>
+<style>
+body {
+font-family: Arial, sans-serif;
+text-align: center;
+margin: 0;
+padding: 0;
+background-color: bisque;
+}
+#picture {
+width: 10%;
+height: 30%;
+border-radius: 1vh;
+border: black;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+transition: transform 2s;
+}
+#video {
+width: 50%;
+height: 50%;
+display: none;
+position: absolute;
+top: 50%;
+left: 50%;
+margin-top: 5rem;
+transform: translate(-50%, -50%);
+}
+#yes-btn, #no-btn {
+padding: 10px 20px;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+position: relative;
+top: 20%;
+left: 50%;
+transform: translate(-50%, 0);
+}
+#yes-btn {
+background-color: #4CAF50;
+color: #fff;
+}
+#no-btn {
+background-color: #E74C3C;
+color: #fff;
+}
+.buttonn{
+margin-right: 42.3rem;
+}
+.navbar {
+display: flex;
+justify-content: space-between;
+align-items: center;
+background-color: #090101;
+color: #fff;
+padding: 1rem;
+position: relative;
+}
+.logo {
+font-size: 1.5rem;
+font-weight: bold;
+}
+.nav-links {
+list-style: none;
+margin: 0;
+padding: 0;
+display: flex;
+}
+.nav-links li {
+margin-right: 20px;
+}
+.nav-links a {
+color: #fff;
+text-decoration: none;
+}
+.burger {
+display: none;
+cursor: pointer;
+}
+@media only screen and (max-width: 768px) {
+.nav-links {
+display: none;
+}
+.burger {
+display: block;
+}
+.navbar {
+flex-direction: column;
+align-items: flex-start;
+}
+.logo {
+margin-bottom: 1rem;
+}
+.nav-links.active {
+display: block;
+position: absolute;
+top: 100%;
+left: 0;
+background-color: #090101;
+padding: 1rem;
+}
+#picture {
+width: 20%;
+height: 20%;
+}
+#video {
+width: 80%;
+height: 80%;
+}
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav-links {
+    display: none;
+  }
+  .burger {
+    display: block;
+  }
+  #picture {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  #video {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  .buttonn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  #yes-btn, #no-btn {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  #picture {
+    height: 150px;
+  }
+  #video {
+    height: 150px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  #picture {
+    height: 10vh;
+    width: 10vh;
+  }
+  #video {
+    height: 100px;
+  }
+}
+.buttonn{
+margin-right: 5rem;
+}
+
+</style>
 </head>
 <body>
+<nav class="navbar">
+<div class="logo">
+<a href="#">AYUSH</a>
+</div>
+<ul class="nav-links">
+<li><a href="#">Home</a></li>
+<li><a href="#">Video</a></li>
+<li><a href="#">Pic</a></li>
+</ul>
+<div class="burger">
+<div class="line1"></div>
+<div class="line2"></div>
+<div class="line3"></div>
+</div>
+</nav>
+<h1>Yes pe click kar - 3 </h1>
+<div class="buttonn">
+<button id="yes-btn">Yes</button><button id="no-btn">No</button>
+</div>
+<img id="picture" src="https://drive.google.com/thumbnail?id=1e22rAZHpyilHZEd6sO_NF6Queqb2ZUcG" alt="Picture">
+<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/IExvU5kK4ZY?autoplay=1" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+<script>
+const yesBtn = document.getElementById('yes-btn');
+const noBtn = document.getElementById('no-btn');
+const picture = document.getElementById('picture');
+const video = document.getElementById('video');
+const burger = document.querySelector('.burger');
+const navLinks = document.querySelector('.nav-links');
+burger.addEventListener('click', () => {
+navLinks.classList.toggle('active');
+});
+yesBtn.addEventListener('click', () => {
+picture.style.transform = 'translate(-50%, -50%) rotate(360deg)';
+setTimeout(() => {
+picture.style.display = 'none';
+video.style.display = 'block';
+video.contentWindow.postMessage('{"event":"command","func":"playVideo","args":""}', '*');
+}, 5000);
+});
+noBtn.addEventListener('click', () => {
+alert('Okay, maybe next time!');
+});
+</script>
 
-    <header>
-        <h1>Welcome to My Website</h1>
-        <p>I am learning Web Development!</p>
-    </header>
-
-    <main>
-        <button onclick="showMessage()">Click Me</button>
-        <p id="message"></p>
-    </main>
-
-    <script src="script.js"></script>
 </body>
 </html>
